--- a/tikz_hlink.tex
+++ b/tikz_hlink.tex
@@ -71,14 +71,14 @@ Some content.
 
 \subsection*{Windows}\label{win}
 Some content.
-
+\clearpage
 \section*{Get started}\label{start}
 \subsection*{First: Do A}\label{caseA}
 Some content.
 
 \subsection*{Second: Do B}\label{caseB}
  Some content.
-
+\clearpage
 \section*{Trouble shooting}\label{trbl-shoot}
 \subsection*{If X happens:}\label{caseX}
 Some content.
