mods to schematic data org chart

--- a/swish-dmp.tex
+++ b/swish-dmp.tex
@@ -66,50 +66,54 @@
 %     \makebox[.4\textwidth][r]{
 
 %    \makebox[.4\textwidth][l]{
- 
-\begin{tikzpicture}[dirtree] % it's what we defined above
 
-\node [draw=black!50,dashed,rectangle,fill=green!20]{\textbf{Root directory}}
-    child { node {\hyperref[dmp]{DMP} }}
-    child { node {\hyperref[datinv]{Data Inventory} }}
-    child { node {\hyperref[install]{Project1} }
-        child { node {\hyperref[linux]{README}} }
-        child { node {\hyperref[mac3]{project management}} }
-        child { node {\hyperref[mac]{dataset1}} 
-            child { node {\hyperref[mac2]{workplan}} }            
-            child { node {\hyperref[mac3]{worklog}} }
-            child { node {\hyperref[workflow]{workflow}} }
-            child { node {\hyperref[dataprov]{data provided}} }
-            child { node {\hyperref[dataprov]{data derived}} 
-              child { node {\hyperref[mac]{files}}} 
-              child { node {\hyperref[mac2]{versions}}}                
-               }                                      
-            child { node {\hyperref[mac2]{results}} }            
-            child { node {\hyperref[mac3]{reports}} }
-}
-        child { node {\hyperref[win]{dataset2}} }
-    }
-    child {node {\hyperref[trbl-shoot]{Project2}}
-        child {node {\hyperref[caseX]{dataset3}}}
-        child {node {\hyperref[caseY]{dataset4}}}
-    }
-    child {node {\hyperref[start]{working\_user}}
-        child { node {\hyperref[caseA]{do A}} }
-        child { node {\hyperref[caseB]{do B}} }
-    }
-    % I've put the external resources to the end:
-    child {node {Versions}
-        child { node {\href{file:sanitize_bib_table.pdf}{Backups}} }% works only, if "manual.pdf" is in
-                                                       % the same directory as the compiled
-                                                       % version of this document
-%        child { node {\href{http://www.google.com/}{Version Control}} }
-    };
-\end{tikzpicture}
-\hspace{0.1cm}
+\begin{tikzpicture}[dirtree] % it's what we defined above
+  
+  \node [draw=black!50,dashed,rectangle,fill=green!20]{\hyperref[dmp]{* main computer} }
+      child { node {\hyperref[dmp]{Data Management Plan} }}
+      child { node {\hyperref[datinv]{Data Inventory} }}
+      child { node {\hyperref[install]{** Project1} }
+          child { node {\hyperref[linux]{README}} }
+          child { node {\hyperref[proj]{project management}} }
+          child { node {\hyperref[mac]{*** dataset1}} 
+              child { node {\hyperref[mac2]{**** workplan and protocol}} }            
+              child { node {\hyperref[mac3]{worklog}} }
+              child { node {\hyperref[workflow]{workflow}} }
+              child { node {\hyperref[dataprov]{**** entities1 data provided}} }
+              child { node {\hyperref[dataprov]{**** entities2 data derived}} 
+                child { node {\hyperref[mac]{files}}} 
+                child { node {\hyperref[mac2]{versions}}}                
+                 }                                      
+              child { node {\hyperref[mac2]{**** results}} 
+                child { node {YYYY-MM-DD}}
+                 }            
+              child { node {\hyperref[mac3]{reports}} }
+  }
+          child { node {\hyperref[win]{dataset2}} }
+      }
+      child {node {\hyperref[trbl-shoot]{Project2}}
+          child {node {\hyperref[caseX]{dataset3}}}
+          child {node {\hyperref[caseY]{dataset4}}}
+      }
+      child {node {\hyperref[start]{working\_user}}
+          child { node {\hyperref[caseA]{do A}} }
+          child { node {\hyperref[caseB]{do B}} }
+      };
+      % I've put the external resources to the end:
+%      child {node {Versions}
+%          child { node {\href{file:sanitize_bib_table.pdf}{Backups}} }% works only, if "manual.pdf" is in
+                                                         % the same directory as the compiled
+                                                         % version of this document
+  %        child { node {\href{http://www.google.com/}{Version Control}} }
+%      };
+  \end{tikzpicture}
+  \hspace{0.1cm}
 \begin{tikzpicture}[
               outpt/.style={->,blue!80!black,very thick},
               >=stealth,
            every node/.append style={align=center}]
+                \node (aux) at (0,18) [draw=black!50,dashed,rectangle,fill=green!30,hyperlink node=pagetwo]{Auxiliary resources}; 
+                \node (aux) at (0,17) [draw=black!50,dashed,rectangle,fill=yellow!30,hyperlink node=pagetwo]{Dropbox}; 
   
                 \node (measdata) at (-2.4,9) [draw=black!50,dashed,rectangle,fill=orange!30,hyperlink node=pagetwo]{Distributed data}; 
                 \node (hypothesis) at (2,9) [draw=black!50,dashed,rectangle,fill=red!30,hyperlink node=pagethree]{Permissions \\ + citations}; 
@@ -123,9 +127,8 @@
   
 \end{tikzpicture}
 %}
-
 \clearpage
-\tikz \node [draw, inner sep=2ex,hyperlink node=pageone] {Go to Page One};
+\tikz \node [draw, inner sep=2ex,hyperlink node=pageone] {Main Computer};
 
 \hypertarget{pagetwo}{Page Two}
 \clearpage
@@ -161,12 +164,34 @@ Some content.
 
 \subsection*{Data Inventory}\label{datinv}
 \subsection*{Worklog2}\label{mac2}
-
-
 \subsection*{Worklog}\label{mac3}
 
+Conventions used for writing these entries are:
+\begin{quote}
+- Names follow this structure [**] [date in ISO 8601] [meeting/notes/results] [from UserName] [Re: topic shortname]
+- 'meetings' are for both agenda preparation and also notes of discussion
+- 'notes' are such things as emailed information or ad hoc Discovery
+- 'results' are entries related to a section of the 'results' folder. 
+  That is, this kind of entry is in parallel to the results entry,
+  however the log contains a prose description of the experiment,
+  whereas the results folder contains scripts etc of all the gory
+  details.  
+\end{quote}
 \subsection*{Workflow}\label{workflow}
 
 \subsection*{Data Provided}\label{dataprov}
+\clearpage
+\subsection*{Project Management}\label{proj}
 
+\begin{tikzpicture}[dirtree] % it's what we defined above
+  
+\node [draw=black!50,dashed,rectangle,fill=green!20]{{project plan} }
+      child { node {{proposal} }
+          child { node {{approved version: this is the master plan}} }
+      }
+      child { node {{meetings} }
+          child { node {{meeting1}} }
+      };
+
+\end{tikzpicture}
 \end{document}
